# irvm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  crates.js  help.html  notes.txt  release.sh  search-index.js  settings.html  src-files.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml
cfg_if/: all.html  index.html  macro.cfg_if.html
examples/simple/: Cargo.toml
irvm/: all.html  index.html  sidebar-items.js
irvm-lower/: Cargo.toml
irvm-lower/src/: lib.rs  llvm.rs
irvm/block/: enum.BinaryOp.html  enum.BitwiseBinaryOp.html  enum.CallableValue.html  enum.FcmpCond.html  enum.IcmpCond.html  enum.Instruction.html  enum.MemoryOp.html  enum.OtherOp.html  enum.Terminator.html  enum.VectorOp.html  index.html  sidebar-items.js  struct.Block.html  struct.CallOp.html  struct.CallReturnAttrs.html  type.BlockIdx.html  type.InstIdx.html
irvm/common/: enum.CConv.html  enum.DllStorageClass.html  enum.Linkage.html  enum.Location.html  enum.RuntimePreemption.html  enum.ThreadLocalStorageModel.html  (+4 more)
nonzero_ext/: all.html  index.html  macro.nonzero.html  sidebar-items.js  trait.NonZero.html  trait.NonZeroAble.html
src/: block.rs  common.rs  datalayout.rs  debug.rs  error.rs  function.rs  lib.rs  module.rs  types.rs  value.rs
target_lexicon/: all.html  constant.HOST.html  enum.Aarch64Architecture.html  enum.Architecture.html  enum.ArmArchitecture.html  enum.BinaryFormat.html  enum.CDataModel.html  enum.CallingConvention.html  enum.CleverArchitecture.html  enum.CustomVendor.html  enum.Endianness.html  enum.Environment.html  enum.Mips32Architecture.html  enum.Mips64Architecture.html  enum.OperatingSystem.html  enum.ParseError.html  enum.PointerWidth.html  enum.Riscv32Architecture.html  enum.Riscv64Architecture.html  enum.Size.html  enum.Vendor.html  enum.X86_32Architecture.html  index.html  macro.triple.html  struct.DefaultToHost.html  struct.DefaultToUnknown.html  struct.DeploymentTarget.html  struct.Triple.html
typed_generational_arena/: all.html  index.html  sidebar-items.js  struct.Arena.html  struct.DisableRemoval.html  struct.Drain.html  struct.IgnoreGeneration.html  struct.Index.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.NonZeroIndex.html  struct.NonzeroGeneration.html  struct.NonzeroWrapGeneration.html  trait.ArenaIndex.html  trait.FixedGenerationalIndex.html  trait.GenerationalIndex.html  trait.IgnoredGeneration.html  type.NanoArena.html  type.NanoIndex.html  type.PicoArena.html  type.PicoIndex.html  type.PtrSlab.html  type.PtrSlabIndex.html  type.Slab.html  type.SlabIndex.html  type.SmallArena.html  type.SmallIndex.html  type.SmallPtrSlab.html  type.SmallPtrSlabIndex.html  type.SmallSlab.html  type.SmallSlabIndex.html  type.StandardArena.html  type.StandardIndex.html  type.StandardSlab.html  type.StandardSlabIndex.html  type.TinyArena.html  type.TinyIndex.html  type.TinyWrapArena.html  type.TinyWrapIndex.html  (+2 more)
(+119 files in other folders)
