[package]
name = "irvm"
version = "0.1.0"
edition = "2024"
authors = ["Edgar Luque <git@edgl.dev>"]
description = "A IR compiler target with a Rust friendly API that lowers to LLVM IR."
keywords = ["llvm", "compiler", "ir", "compiler-target", "llvm-ir"]
categories = ["compilers"]
license = "Apache-2.0"

[dependencies]
target-lexicon = { version = "0.13.2", features = ["std"] }
typed-generational-arena = "0.2.6"


[workspace]
members = ["irvm-lower"]
