[package]
name = "irvm"
version = "0.1.0-alpha.6"
edition = "2024"
authors = ["Edgar Luque <git@edgl.dev>"]
repository = "https://github.com/edg-l/irvm"
documentation = "https://edg-l.github.io/irvm/irvm/"
description = "A IR compiler target with a Rust friendly API that lowers to LLVM IR."
keywords = ["llvm", "compiler", "ir", "compiler-target", "llvm-ir"]
categories = ["compilers"]
license = "Apache-2.0"

[dependencies]
target-lexicon = { version = "0.13.4", features = ["std"] }
thiserror = "2.0.18"
typed-generational-arena = "0.2.9"


[workspace]
members = [ "examples/simple","irvm-lower"]
