[package]
name = "irvm-lower"
version = "0.1.0-alpha.4"
edition = "2024"
authors = ["Edgar Luque <git@edgl.dev>"]
description = "The lowering library for IRVM to go to LLVM IR"
repository = "https://github.com/edg-l/irvm"
keywords = ["llvm", "compiler", "ir", "compiler-target", "llvm-ir"]
categories = ["compilers"]
license = "Apache-2.0"
documentation = "https://edg-l.github.io/irvm/irvm_lower/"

[dependencies]
llvm-sys = "201.0.1"
irvm = { path = "..", version = "0.1.0-alpha.4" }
itertools = "0.14.0"
thiserror = "2.0.12"
# Dwarf constants
gimli = { version = "0.32.0", default-features = false, features = ["std"]}
